--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -1,6 +1,8 @@
 $default: #666;
 $line-h: 1.8;
 $secondary: rgb(66, 66, 66);
+$ortopediaColor: #002751;
+$regeneracjaColor: #650008;
 
 
 $phone: "(min-width: 480px)";
