--- a/style/css/style.css
+++ b/style/css/style.css
@@ -47,12 +47,48 @@ p {
   line-height: 1.6;
 }
 
+.btn {
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  font-size: 1.9rem;
+  padding: 1rem 2rem;
+  border: 1px solid #666;
+  -webkit-transition: background .2s, color .2s, -webkit-transform .1s;
+  transition: background .2s, color .2s, -webkit-transform .1s;
+  transition: background .2s, color .2s, transform .1s;
+  transition: background .2s, color .2s, transform .1s, -webkit-transform .1s;
+  display: block;
+  width: 30rem;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.btn:hover {
+  background-color: #666;
+  color: white;
+}
+
+.btn:active {
+  -webkit-transform: translateY(0.3rem);
+          transform: translateY(0.3rem);
+}
+
+.line {
+  width: 80%;
+  height: 1px;
+  background-color: #666;
+  margin-top: 3rem;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .l-header {
   max-width: 100vw;
   height: 100vh;
   position: relative;
   overflow: hidden;
-  padding-top: 1rem;
   background: white;
   background: -webkit-gradient(linear, left bottom, left top, color-stop(30%, white), to(#595353));
   background: linear-gradient(0deg, white 30%, #595353 100%);
@@ -68,7 +104,7 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 100vw;
+  width: 100%;
 }
 
 .c-nav__img {
@@ -160,7 +196,7 @@ p {
 }
 
 .c-menu-nav__link--active {
-  border-bottom: 1px solid #666;
+  border-bottom: 1px solid white;
 }
 
 @media (max-height: 490px) {
@@ -179,13 +215,12 @@ p {
             justify-content: space-between;
     font-size: .9rem;
     padding: 0 3rem;
-    font-weight: bold;
   }
   .c-menu-nav__link {
     padding: 1rem;
   }
   .c-menu-nav__link:hover {
-    border-bottom: 1px solid #666;
+    border-bottom: 1px solid white;
   }
 }
 
@@ -678,41 +713,57 @@ p {
   }
 }
 
-.btn {
-  margin-left: auto;
-  margin-right: auto;
+.c-gallery {
   text-align: center;
-  font-size: 1.9rem;
-  padding: 1rem 2rem;
-  border: 1px solid #666;
-  -webkit-transition: background .2s, color .2s, -webkit-transform .1s;
-  transition: background .2s, color .2s, -webkit-transform .1s;
-  transition: background .2s, color .2s, transform .1s;
-  transition: background .2s, color .2s, transform .1s, -webkit-transform .1s;
-  display: block;
-  width: 30rem;
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  line-height: 0;
+  -webkit-column-count: 1;
+  -webkit-column-gap: 0px;
+  -moz-column-count: 1;
+  -moz-column-gap: 0px;
+  column-count: 1;
+  column-gap: 0px;
 }
 
-.btn:hover {
-  background-color: #666;
-  color: white;
+.c-gallery__img {
+  width: 100% !important;
+  max-width: 30rem;
+  height: auto !important;
+  padding: 1rem;
 }
 
-.btn:active {
-  -webkit-transform: translateY(0.3rem);
-          transform: translateY(0.3rem);
+@media (min-width: 480px) {
+  .c-gallery {
+    -webkit-column-count: 2;
+    column-count: 2;
+  }
 }
 
-.line {
-  width: 80%;
-  height: 1px;
-  background-color: #666;
-  margin-top: 3rem;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+@media (min-width: 768px) {
+  .c-gallery {
+    -webkit-column-count: 3;
+    column-count: 3;
+  }
+}
+
+@media (min-width: 1024px) {
+  .c-gallery {
+    -webkit-column-count: 4;
+    column-count: 4;
+  }
+}
+
+@media (min-width: 1350px) {
+  .c-gallery {
+    -webkit-column-count: 5;
+    column-count: 5;
+  }
+}
+
+@media (min-width: 1351px) {
+  .c-gallery {
+    -webkit-column-count: 6;
+    column-count: 6;
+  }
 }
 
 .l-opinions {
