--- a/style/scss/_base-pages.scss
+++ b/style/scss/_base-pages.scss
@@ -1,6 +1,6 @@
 .c-nav {
     width: 100%;
-    padding-top: 1rem;
+
     position: relative;
 }
 
@@ -31,6 +31,25 @@
         color: $default;
     }
 }
+
+.c-menu-nav {
+    &__link {
+
+        &--active {
+            border-bottom: 1px solid $default;
+        }
+    }
+
+    @media #{$laptop} {
+
+        &__link {
+            &:hover {
+                border-bottom: 1px solid $default;
+            }
+        }
+    }
+}
+
 
 
 
