--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -3,7 +3,7 @@
     height: 100vh;
     position: relative;
     overflow: hidden;
-    padding-top: 1rem;
+
     background: rgb(255, 255, 255);
     background: linear-gradient(0deg, rgba(255, 255, 255, 1) 30%, rgba(89, 83, 83, 1) 100%);
 }
@@ -12,7 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
+    width: 100%;
 
     &__img {
         width: 100%;
@@ -91,7 +91,7 @@
         padding: 1rem 0;
 
         &--active {
-            border-bottom: 1px solid $default;
+            border-bottom: 1px solid white;
         }
     }
 
@@ -104,13 +104,13 @@
         justify-content: space-between;
         font-size: .9rem;
         padding: 0 3rem;
-        font-weight: bold;
+
 
         &__link {
             padding: 1rem;
 
             &:hover {
-                border-bottom: 1px solid $default;
+                border-bottom: 1px solid white;
             }
         }
     }
