--- a/style/scss/style.scss
+++ b/style/scss/style.scss
@@ -1,9 +1,10 @@
 @import 'variables';
 @import 'mixins';
 @import 'base';
+@import 'buttons';
 @import 'header';
 @import 'offert';
-@import 'buttons';
+@import 'gallery';
 @import 'opinions';
 @import 'contact';
 @import 'footer';
