--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -9,4 +9,4 @@ $phone: "(min-width: 480px)";
 $small-tablet: "(min-width: 768px)";
 $laptop: "(min-width: 1024px)";
 $wide: "(min-width: 1350px)";
-$super-wide: "(min-width: 1351px)";
+$desktop: "(min-width: 1600px)";
