--- a/style/css/style.css
+++ b/style/css/style.css
@@ -119,6 +119,16 @@ p {
 
 .c-menu {
   position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   width: 25rem;
   background-color: white;
   height: 100vh;
@@ -128,14 +138,11 @@ p {
   right: 0;
   top: 0;
   padding: 2rem 1rem;
+  margin-bottom: -5rem;
   -webkit-transition: width .3s ease-in-out, -webkit-transform .3s ease-in-out;
   transition: width .3s ease-in-out, -webkit-transform .3s ease-in-out;
   transition: transform .3s ease-in-out, width .3s ease-in-out;
   transition: transform .3s ease-in-out, width .3s ease-in-out, -webkit-transform .3s ease-in-out;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 1;
-  grid-column: 2/3;
-  margin-bottom: -5rem;
 }
 
 .c-menu--disactive {
@@ -166,7 +173,7 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-bottom: 3rem;
+  margin-bottom: 1rem;
   font-size: 3rem;
 }
 
@@ -278,13 +285,22 @@ p {
 }
 
 .c-most-popular {
-  height: 50%;
-  padding: 5rem 0;
+  padding: 1rem 0;
+  font-size: 1rem;
 }
 
 .c-most-popular__item {
-  padding: 2rem;
+  padding: 1rem;
   text-align: start;
+}
+
+@media (max-height: 490px) {
+  .c-most-popular {
+    font-size: 1rem;
+  }
+  .c-most-popular__item {
+    padding: 0.5rem;
+  }
 }
 
 @media (min-width: 1024px) {
