--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -26,6 +26,9 @@
 
 .c-menu {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 25rem;
     background-color: white;
     height: 100vh;
@@ -35,10 +38,9 @@
     right: 0;
     top: 0;
     padding: 2rem 1rem;
+    margin-bottom: -5rem;
     transition: transform .3s ease-in-out,
         width .3s ease-in-out;
-    grid-column: 2/3;
-    margin-bottom: -5rem;
 
     &--disactive {
         transform: translateX(25rem);
@@ -63,7 +65,7 @@
     @include center;
     display: flex;
     justify-content: center;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
     font-size: 3rem;
 
     &__link {
@@ -83,9 +85,7 @@
 .c-menu-nav {
     font-size: 2rem;
     letter-spacing: 0.2rem;
-
     color: $default;
-
 
     &__item {
         padding: 1.5rem 0;
@@ -166,12 +166,20 @@
 }
 
 .c-most-popular {
-    height: 50%;
-    padding: 5rem 0;
+    padding: 1rem 0;
+    font-size: 1rem;
 
     &__item {
-        padding: 2rem;
+        padding: 1rem;
         text-align: start;
+    }
+
+    @media (max-height: 490px) {
+        font-size: 1rem;
+
+        &__item {
+            padding: 0.5rem;
+        }
     }
 
     @media #{$laptop} {
