--- a/style/css/style.css
+++ b/style/css/style.css
@@ -75,13 +75,13 @@ p {
 }
 
 .line {
+  margin-left: auto;
+  margin-right: auto;
   width: 80%;
   height: 1px;
   background-color: #666;
   margin-top: 3rem;
   display: block;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .l-header {
@@ -132,13 +132,11 @@ p {
   width: 25rem;
   background-color: white;
   height: 100vh;
-  min-height: 50rem;
   text-align: center;
   z-index: 100;
   right: 0;
   top: 0;
   padding: 2rem 1rem;
-  margin-bottom: -5rem;
   -webkit-transition: width .3s ease-in-out, -webkit-transform .3s ease-in-out;
   transition: width .3s ease-in-out, -webkit-transform .3s ease-in-out;
   transition: transform .3s ease-in-out, width .3s ease-in-out;
@@ -409,13 +407,15 @@ p {
 
 .l-header-section-wrapper {
   height: 100%;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
-  display: inline-flex;
   -webkit-transition: -webkit-transform 1s ease-in-out;
   transition: -webkit-transform 1s ease-in-out;
   transition: transform 1s ease-in-out;
   transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
+}
+
+.swiper-container {
+  height: 100%;
+  position: static !important;
 }
 
 .c-header-section {
@@ -438,46 +438,19 @@ p {
   overflow: hidden;
 }
 
-.c-header-section:nth-child(2) .c-header-section__title {
+.c-header-section--second .c-header-section__title {
   font-size: calc(24px + (90 - 24) * ((100vw - 300px) / (1600 - 300)));
   color: white;
 }
 
-@media (min-width: 768px) {
-  .c-header-section:nth-child(2) .c-header-section__img-wrapper {
-    right: -20rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .c-header-section:nth-child(2) .c-header-list {
-    bottom: 30rem;
-  }
-}
-
-@media (min-width: 1350px) {
-  .c-header-section:nth-child(2) .c-header-section__img-wrapper {
-    right: -5%;
-  }
-}
-
-.c-header-section:nth-child(3) .c-header-section__title {
+.c-header-section--third .c-header-section__title {
   font-size: calc(30px + (90 - 30) * ((100vw - 300px) / (1600 - 300)));
   color: #650008;
 }
 
 @media (min-width: 768px) {
-  .c-header-section:nth-child(3) .c-header-section__title {
+  .c-header-section--third .c-header-section__title {
     text-align: start;
-  }
-  .c-header-section:nth-child(3) .c-header-section__img-wrapper {
-    right: -80rem;
-  }
-}
-
-@media (min-width: 1024px) {
-  .c-header-section:nth-child(3) .c-header-section__img-wrapper {
-    right: -50rem;
   }
 }
 
@@ -488,6 +461,7 @@ p {
   letter-spacing: .7rem;
   z-index: 5;
   text-align: center;
+  margin-top: 2rem;
 }
 
 .c-header-section__img-wrapper {
@@ -514,17 +488,13 @@ p {
   }
   .c-header-section__img-wrapper {
     position: absolute;
-    right: -5rem;
+    right: 0;
   }
 }
 
 @media (min-width: 1024px) {
   .c-header-section {
     padding-left: 10rem;
-  }
-  .c-header-section__img-wrapper {
-    height: 100%;
-    right: -5rem;
   }
 }
 
@@ -533,7 +503,7 @@ p {
     padding-left: 3%;
   }
   .c-header-section__img-wrapper {
-    right: 15%;
+    right: 5%;
   }
 }
 
@@ -547,11 +517,10 @@ p {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  bottom: 18rem;
   color: #252525;
   z-index: 2;
   max-width: 50rem;
-  margin-bottom: 15rem;
+  margin-bottom: 16rem;
 }
 
 .c-header-list__item {
@@ -641,6 +610,16 @@ p {
   .c-social-list__social {
     font-size: 2.5rem;
   }
+}
+
+.swiper-pagination {
+  bottom: 1rem !important;
+  z-index: 100;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: #666 !important;
 }
 
 .bg-menu {
