--- a/style/css/subpages.css
+++ b/style/css/subpages.css
@@ -72,6 +72,10 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 5rem;
 }
 
 .c-about__img-wrapper {
@@ -88,13 +92,43 @@
   position: absolute;
   bottom: 0;
   padding: 2rem;
-  background-color: rgba(102, 102, 102, 0.9);
+  background-color: rgba(102, 102, 102, 0.8);
   width: 100%;
   color: white;
 }
 
 .c-about__text {
   padding: 2%;
+  max-width: 60ch;
+  text-align: justify;
+}
+
+.c-about:nth-child(3) .c-about__img-wrapper {
+  background: url("./../../assets/gallery8.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.c-about:nth-child(3) .c-about__img-more {
+  background-color: rgba(0, 39, 81, 0.8);
+}
+
+.c-about:nth-child(4) .c-about__img-wrapper {
+  background: url("./../../assets/about2.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.c-about:nth-child(4) .c-about__img-more {
+  background-color: rgba(101, 0, 8, 0.8);
+}
+
+@media (min-width: 1024px) {
+  .c-about:nth-child(2n) .c-about__text {
+    -webkit-box-ordinal-group: -1;
+        -ms-flex-order: -2;
+            order: -2;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -106,6 +140,7 @@
   }
   .c-about__text {
     width: 70%;
+    max-width: 80ch;
   }
 }
 
@@ -219,103 +254,70 @@
   color: black;
 }
 
-.c-pricer__item {
-  padding-bottom: 2rem;
-}
-
 .c-pricer__title {
   font-size: 2.8rem;
   color: #002751;
-}
-
-.c-pricer__item-title-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: baseline;
-      -ms-flex-align: baseline;
-          align-items: baseline;
-  background-color: #002751;
-  padding: 1rem;
-  color: white;
-  cursor: pointer;
-  -webkit-transition: border-radius .5s;
-  transition: border-radius .5s;
-}
-
-.c-pricer__item-title-wrapper--active {
-  border-radius: 10px 10px 0 0;
-}
-
-.c-pricer__item-title, .c-pricer__item-titles-wrapper {
-  pointer-events: none;
 }
 
 .c-pricer__item-titles {
   padding: .5rem 0;
 }
 
-.c-pricer__item-title-icon {
-  -webkit-transition: -webkit-transform 0.5s;
-  transition: -webkit-transform 0.5s;
-  transition: transform 0.5s;
-  transition: transform 0.5s, -webkit-transform 0.5s;
-  pointer-events: none;
-}
-
-.c-pricer__item-title-icon--active {
-  -webkit-transform: rotate(180deg);
-          transform: rotate(180deg);
-}
-
 .c-pricer__sub-item {
   padding: 1rem 1rem;
   font-size: 1.2rem;
-  background-color: #dbdbdb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: rgba(0, 39, 81, 0.6);
 }
 
 .c-pricer__sub-item:nth-child(2n) {
-  background-color: #a1a1a1;
+  background-color: rgba(0, 39, 81, 0.2);
 }
 
-.c-pricer__sub-item:last-child {
-  border-radius: 0 0 10px 10px;
-}
-
-.c-pricer__sub-list {
-  max-height: 0;
-  -webkit-transition: max-height 0.5s;
-  transition: max-height 0.5s;
-  overflow: hidden;
+.c-pricer__item-title {
+  font-weight: normal;
+  max-width: 34ch;
 }
 
 .c-pricer__sub-item-price {
   font-weight: bold;
+  width: 9ch;
 }
 
-.c-pricer:nth-child(3) .c-pricer__item-title-wrapper {
-  background-color: #650008;
+.c-pricer:nth-child(2) .c-pricer__sub-item {
+  background-color: rgba(102, 102, 102, 0.2);
+}
+
+.c-pricer:nth-child(2) .c-pricer__sub-item:nth-child(2n) {
+  background-color: rgba(102, 102, 102, 0.6);
+}
+
+.c-pricer:nth-child(2) .c-pricer__title {
+  color: #666;
+}
+
+.c-pricer:nth-child(3) .c-pricer__sub-item {
+  background-color: rgba(101, 0, 8, 0.4);
 }
 
 .c-pricer:nth-child(3) .c-pricer__title {
   color: #650008;
 }
 
-.c-pricer:nth-child(2) .c-pricer__item-title-wrapper {
-  background-color: #666;
+.c-pricer:nth-child(3) .c-pricer__sub-item:nth-child(2) {
+  margin-bottom: 4rem;
 }
 
-.c-pricer:nth-child(2) .c-pricer__title {
-  color: #666;
+.c-pricer:nth-child(3) .c-pricer__sub-item:nth-child(4) {
+  margin-bottom: 4rem;
 }
 
 .c-header-section__title {
