--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -32,13 +32,11 @@
     width: 25rem;
     background-color: white;
     height: 100vh;
-    min-height: 50rem;
     text-align: center;
     z-index: 100;
     right: 0;
     top: 0;
     padding: 2rem 1rem;
-    margin-bottom: -5rem;
     transition: transform .3s ease-in-out,
         width .3s ease-in-out;
 
@@ -270,10 +268,12 @@
 
 .l-header-section-wrapper {
     height: 100%;
-    display: inline-flex;
     transition: transform 1s ease-in-out;
-    // transform: translateX(-1350px);
+}
 
+.swiper-container {
+    height: 100%;
+    position: static !important;
 }
 
 .c-header-section {
@@ -287,34 +287,14 @@
     overflow: hidden;
 
 
-    &:nth-child(2) {
+    &--second {
         .c-header-section__title {
             font-size: calc(24px + (90 - 24) * ((100vw - 300px) / (1600 - 300)));
             color: white;
         }
-
-        @media #{$small-tablet} {
-
-            .c-header-section__img-wrapper {
-                right: -20rem;
-            }
-        }
-
-        @media #{$laptop} {
-
-            .c-header-list {
-                bottom: 30rem;
-            }
-        }
-
-        @media #{$wide} {
-            .c-header-section__img-wrapper {
-                right: -5%;
-            }
-        }
     }
 
-    &:nth-child(3) {
+    &--third {
         .c-header-section__title {
             font-size: calc(30px + (90 - 30) * ((100vw - 300px) / (1600 - 300)));
             color: $regeneracjaColor;
@@ -324,17 +304,7 @@
 
             .c-header-section__title {
                 text-align: start;
-            }
 
-            .c-header-section__img-wrapper {
-                right: -80rem;
-            }
-        }
-
-        @media #{$laptop} {
-
-            .c-header-section__img-wrapper {
-                right: -50rem;
             }
         }
     }
@@ -346,18 +316,18 @@
         letter-spacing: .7rem;
         z-index: 5;
         text-align: center;
-
+        margin-top: 2rem;
     }
 
     &__img-wrapper {
         height: 100%;
         opacity: 40%;
         position: absolute;
-
     }
 
     &__img {
         height: 100%;
+
     }
 
     @media #{$small-tablet} {
@@ -372,25 +342,19 @@
 
         &__img-wrapper {
             position: absolute;
-            right: -5rem;
+            right: 0;
         }
     }
 
     @media #{$laptop} {
-
         padding-left: 10rem;
-
-        &__img-wrapper {
-            height: 100%;
-            right: -5rem;
-        }
     }
 
     @media #{$wide} {
         padding-left: 3%;
 
         &__img-wrapper {
-            right: 15%;
+            right: 5%;
         }
     }
 }
@@ -400,11 +364,10 @@
     flex-wrap: wrap;
     font-size: 1.2rem;
     justify-content: center;
-    bottom: 18rem;
     color: rgb(37, 37, 37);
     z-index: 2;
     max-width: 50rem;
-    margin-bottom: 15rem;
+    margin-bottom: 16rem;
 
     &__item {
         padding: .5rem 1rem;
@@ -472,6 +435,16 @@
             font-size: 2.5rem
         }
     }
+}
+
+.swiper-pagination {
+    bottom: 1rem !important;
+    z-index: 100;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+    color: $default !important;
 }
 
 .bg-menu {
