--- a/style/scss/_opinions.scss
+++ b/style/scss/_opinions.scss
@@ -4,10 +4,9 @@
 
 
 .c-opinions-wrapper {
-    display: inline-flex;
-    transition: transform 1s;
+
     height: 100%;
-    overflow-x: hidden;
+
 
     &__item {
         width: 100vw;
@@ -42,5 +41,13 @@
         &__item {
             padding: 0 50rem;
         }
+    }
+}
+
+.swiper-container-second {
+    position: relative !important;
+
+    .swiper-pagination {
+        bottom: -10px !important;
     }
 }
