--- a/style/scss/_cookies.scss
+++ b/style/scss/_cookies.scss
@@ -1,6 +1,6 @@
 .c-header-section {
 
-    &__title {
+    &__title--cookies {
 
         font-size: calc(24px + (72 - 24) * ((100vw - 300px) / (1600 - 300)));
 
