--- a/style/scss/_header.scss
+++ b/style/scss/_header.scss
@@ -13,19 +13,35 @@
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    background-color: white;
+    position: relative;
+    height: 6rem;
 
 
     &__logo {
-        padding: 2rem;
-        justify-self: center;
+        padding: .5rem 4rem;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+
+
+
     }
 
     &__img {
-        width: 15rem;
+        height: 5rem;
     }
 
     @media #{$laptop} {
-        background-color: white;
+        padding: 0 5%;
+        height: auto;
+
+        &__logo {
+            position: static;
+            transform: translateX(0);
+        }
+
     }
 }
 
@@ -163,8 +179,12 @@
         }
     }
 
+    @media #{$laptop} {
+        margin-left: 10%;
+    }
+
     @media #{$wide} {
-        padding: 0 10% 0 20%;
+        margin-left: 20%;
     }
 }
 
@@ -254,7 +274,7 @@
 
     &__inner--active::before {
         transform: translateY(10px) rotate(-45deg);
-
+        background-color: white;
     }
 
     &__inner::after {
@@ -290,7 +310,6 @@
     height: 100%;
     width: 100vw;
     overflow: hidden;
-    // transition: all 1s !important;
 
     &--second {
         .c-header-section__title {
@@ -315,7 +334,7 @@
     }
 
     &__title {
-        font-size: calc(30px + (100 - 30) * ((100vw - 300px) / (1600 - 300)));
+        font-size: calc(30px + (120 - 30) * ((100vw - 300px) / (1600 - 300)));
         font-weight: bold;
         color: $ortopediaColor;
         letter-spacing: .7rem;
@@ -324,9 +343,23 @@
         margin-top: 2rem;
     }
 
+    &__wrapper-btn {
+        color: $secondary;
+        z-index: 100;
+        text-align: center;
+        margin-bottom: -5rem;
+        color: black;
+    }
+
+    &__description {
+        font-size: calc(15px + (20 - 15) * ((100vw - 300px) / (1600 - 300)));
+        max-width: 70%;
+        @include center;
+    }
+
     &__img-wrapper {
         height: 100%;
-        opacity: 40%;
+        opacity: 30%;
         position: absolute;
     }
 
@@ -345,6 +378,23 @@
             letter-spacing: 1.7rem;
         }
 
+        &__wrapper-btn {
+            margin: 0;
+            text-align: start;
+        }
+
+        &__description {
+            display: inline-block;
+            margin: 0 0 2rem 0;
+            text-align: start;
+
+        }
+
+        &__btn {
+            display: block;
+            margin: 0;
+        }
+
         &__img-wrapper {
             position: absolute;
             right: 0;
@@ -356,7 +406,7 @@
     }
 
     @media #{$wide} {
-        padding-left: 3%;
+        padding-left: 10%;
 
         &__img-wrapper {
             right: 5%;
@@ -371,7 +421,7 @@
     justify-content: center;
     color: rgb(37, 37, 37);
     z-index: 2;
-    max-width: 50rem;
+    max-width: 40rem;
     margin-bottom: 16rem;
 
     &__item {
@@ -379,10 +429,11 @@
     }
 
     @media #{$small-tablet} {
-        width: 75%;
-        max-width: 65rem;
+        max-width: 50rem;
+
         justify-content: flex-start;
         font-size: 1.5rem;
+
 
         &__item {
             padding: 1rem 2rem;
@@ -390,12 +441,10 @@
     }
 
     @media #{$laptop} {
-        font-size: 2rem;
+        max-width: 70rem;
     }
 
-    @media #{$wide} {
-        max-width: 100rem;
-    }
+
 }
 
 .c-phone-wrapper {
