--- a/style/scss/_mixins.scss
+++ b/style/scss/_mixins.scss
@@ -1,7 +1,7 @@
 @mixin hamburger-line {
     width: 100%;
     height: 3px;
-    background-color: white;
+    background-color: $default;
     position: absolute;
 }
 
