--- a/style/css/subpages.css
+++ b/style/css/subpages.css
@@ -308,6 +308,10 @@
   background-color: rgba(101, 0, 8, 0.4);
 }
 
+.c-pricer:nth-child(3) .c-pricer__sub-item:nth-child(2n) {
+  background-color: rgba(101, 0, 8, 0.6);
+}
+
 .c-pricer:nth-child(3) .c-pricer__title {
   color: #650008;
 }
